# MultiComponent_VillainModel

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Villain.sublime-project  Villain.sublime-workspace  build.sh  conanfile.txt  conanfile_opengl.txt
.github/workflows/: macos11.yml  ubuntu20.yml
OpenGL/: Makefile  README.md
OpenGL/src/: common.h  main.cpp
OpenGL/src/ArrowHead_2D/: ArrowHead_2D.cpp  ArrowHead_2D.h  draw.cpp
OpenGL/src/Camera/: Camera.cpp  Camera.h
OpenGL/src/Cone/: Cone.cpp  Cone.h  draw.cpp
OpenGL/src/Cylinder/: Cylinder.cpp  Cylinder.h  draw.cpp
OpenGL/src/Line/: Line.cpp  Line.h  draw.cpp
OpenGL/src/Line_2D/: Line_2D.cpp  Line_2D.h  draw.cpp
OpenGL/src/Rectangle/: Rectangle.cpp  Rectangle.h  draw.cpp
OpenGL/src/Rectangle_2D/: Rectangle_2D.cpp  Rectangle_2D.h  draw.cpp
OpenGL/src/Sphere/: Sphere.cpp  Sphere.h  draw.cpp
OpenGL/src/Text/: Text.cpp  Text.h  draw.cpp
OpenGL/src/Window/: Window.cpp  Window.h  draw.cpp  init.cpp  show.cpp
OpenGL/src/Window/add-event-listeners/: key-press.cpp  key-repeat.cpp
OpenGL/src/Window/events/: glfw.cpp  on-key-press.cpp  on-key-release.cpp  on-key-repeat.cpp  on-mouse-move.cpp  on-mouse-press.cpp  on-mouse-release.cpp  on-scroll.cpp
OpenGL/src/etc/: cout.h
OpenGL/src/shaders/: fragment.glsl  fragment_diffuse.glsl  vertex_2D.glsl  vertex_ambient.glsl  vertex_diffuse.glsl
OpenGL/src/util/: util.cpp  util.h
batch_script/: .Resampling_data_charge.sh.swp  AB + Josephson.ipynb  Betac_Z2 vs Betac_U1-eta20.1.ipynb  Betac_Z2 vs Betac_U1.ipynb  Betac_crossing_eta20.1_vs_nu.sh  Betac_crossing_nu0.2_e.sh  Betac_crossing_nu0.4_eta.sh  Betac_crossing_nu0.4_eta20.1_alpha.sh  Betac_crossing_nu0.6_eta20.1_alpha.sh  Betac_crossing_nu0_e.sh  Changing AB coupling.ipynb  Check_Thermalization.py  Check_ranks.py  Chesk_Phases.py  Crossing point Binder.ipynb  Crossing point Jdiff-KTH_PC-eta20.1.ipynb  Crossing point Jdiff-KTH_PC.ipynb  Crossing point Jsum-KTH_PC.ipynb  Crossing point U-KTH_PC-eta20.1.ipynb  Crossing point U-KTH_PC.ipynb  Fast_Check_Observables.py  Fig_reply.ipynb  Figures_betc.ipynb  Find_U1betac_crossings.py  Find_U1betac_crossings_charge.py  Find_Z2betac_crossings.py  Find_betac_crossings.py  Find_betac_crossings.sh  New_Autocorr_time.py  New_Bootstrap_DualStiffness.py  New_Bootstrap_Energy.py  New_Bootstrap_HelicityModulus.py  New_Bootstrap_Magnetization.py  New_Bootstrap_Magnetization_phase.py  New_LogBoxing.py  Probability_Distributions.py  Probability_Distributions_energies.py  Probability_Distributions_energies.sh  Resampling_data.sh  Resampling_data_charge.sh  (+31 more)
batch_script/.ipynb_checkpoints/: Betac_Z2 vs Betac_U1-eta20.1-checkpoint.ipynb  Changing Josephson coupling-checkpoint.ipynb  Crossing point Jdiff-KTH_PC-checkpoint.ipynb  Crossing point Jdiff-KTH_PC-eta20.1-checkpoint.ipynb  Crossing point Jsum-KTH_PC-checkpoint.ipynb  Crossing point Jsum-KTH_PC-eta20.1-checkpoint.ipynb  Crossing point U-KTH_PC-checkpoint.ipynb  Crossing point U-KTH_PC-eta20.1-checkpoint.ipynb  Figures_betc-checkpoint.ipynb  Symmetrized Model eta2=0.1_FIGURES-KTH_PC-checkpoint.ipynb  Symmetrized Model eta2=1_FIGURES-KTH_PC-checkpoint.ipynb  band_anisotropy-checkpoint.ipynb  nu0.4_different_eta2-checkpoint.ipynb  nu0_eta2-checkpoint.ipynb
cmake/: BuildDependency.cmake  CompilerFlags.cmake  Fetch_h5pp.cmake  InstallPackage.cmake  PrintHostInfo.cmake  PrintOptionInfo.cmake  PrintTargetInfo.cmake  SetupDependencies.cmake  SetupDependenciesCMake.cmake  SetupDependenciesConan.cmake  SetupDependenciesFetch.cmake  SetupDependenciesFind.cmake  SetupPaths.cmake  SetupStdFilesystem.cmake
cmake/conan/: conan_support.cmake
cmake/external_Freetype/: CMakeLists.txt
cmake/external_glad/: CMakeLists.txt
cmake/external_glfw3/: CMakeLists.txt
cmake/external_glm/: CMakeLists.txt
cmake/external_h5pp/: CMakeLists.txt
python/: extract-color-map.py
source/: constants.h  eigen.h  initialization.cpp  initialization.h  main.cpp  main.h  measures.cpp  measures.h  montecarlo.cpp  montecarlo.h  mpi_tools.h  pt.cpp  pt.h  rng.h  villain_MC.cpp  villain_MC.h  villain_potential.cpp  villain_potential.h
source/GUI/: GUI.cpp  GUI.h  color-map-hsv.cpp  compute-velocities.cpp  index-maps.cpp  on-key-press.cpp  on-key-repeat.cpp  render-loop.cpp  single-update.cpp  try-multiple-updates.cpp
source/GUI/etc/: cout-types.h  throw-error.h
tests/: CMakeLists.txt
